--- a/templates/new_plant.html
+++ b/templates/new_plant.html
@@ -20,8 +20,10 @@
                         {% endfor %}
                     </select>
                 </div>
+
+                <h5> {{ msg }} </h5>
                 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="getTemperature"> Temperature </label>
                     <input class="form-control" autocomplete="off" autofocus placeholder="Temperature" name="temperature" type="text">
                 </div>
@@ -39,7 +41,7 @@
                 <div class="form-group">
                     <label for="getHumidity"> Humidity </label>
                     <input class="form-control" autocomplete="off" autofocus placeholder="Humidity" name="humidity" type="text">
-                </div>
+                </div> -->
 
                 <input class="btn btn-primary" type="submit" value=" Insert Plant ">
             </form>
