crud working, improve design

--- a/templates/myplant.html
+++ b/templates/myplant.html
@@ -8,21 +8,21 @@
         <table class="table">
           <thead>
           <tr>
-            <th scope="col"> Name </th>
-            <th scope="col"> Plants </th>
+            <th scope="col"> Plant Name </th>
+            <th scope="col"> Plant Type </th>
             <th scope="col"> Date </th> 
-            <!-- <th scope="col"> Temperature </th>
+            <th scope="col"> Temperature </th>
             <th scope="col"> UV </th>
             <th scope="col"> Moisture </th>
             <th scope="col"> Humidity </th>
-            -->
+           
           </tr>
           </thead>
           <tbody>
           {% for inventary in inventary %}
           <tr>
-            <td>{{inventary[1]}}</td>
             <td>{{inventary[2]}}</td>
+            <td>{{inventary[3]}}</td>
           </tr>
           {% endfor %}
           </tbody>
