updated UI of website - Kyle -Added about page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
 
-
+<div class="test">HI</div>
 <h2 class="text-center"> Log In </h2>
 
 <div class="row">
